appId: de.codext.radiowelle
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Beliebt in Deutschland"
    timeout: 90000
- tapOn: "SWR3"
- extendedWaitUntil:
    visible: "SWR3"
    timeout: 5000
- tapOn:
    point: "40%,88%"
- extendedWaitUntil:
    visible: "Zu Favoriten hinzufügen"
    timeout: 10000
- tapOn: "Zu Favoriten hinzufügen"
- tapOn: "Player schließen"
- tapOn: "Bayern 3"
- tapOn:
    point: "40%,88%"
- extendedWaitUntil:
    visible: "Zu Favoriten hinzufügen"
    timeout: 10000
- tapOn: "Zu Favoriten hinzufügen"
- tapOn: "Player schließen"
- tapOn: "Antenne Bayern"
- tapOn:
    point: "40%,88%"
- extendedWaitUntil:
    visible: "Zu Favoriten hinzufügen"
    timeout: 10000
- tapOn: "Zu Favoriten hinzufügen"
- tapOn: "Player schließen"
- tapOn: "Deutschlandfunk"
- tapOn:
    point: "40%,88%"
- extendedWaitUntil:
    visible: "Zu Favoriten hinzufügen"
    timeout: 10000
- tapOn: "Zu Favoriten hinzufügen"
- tapOn: "Player schließen"
- tapOn: "1LIVE"
- tapOn:
    point: "40%,88%"
- extendedWaitUntil:
    visible: "Zu Favoriten hinzufügen"
    timeout: 10000
- tapOn: "Zu Favoriten hinzufügen"
- extendedWaitUntil:
    visible: "Song finden"
    timeout: 40000
- waitForAnimationToEnd
- takeScreenshot: ${OUT}/01-player
- tapOn: "Sleep-Timer"
- waitForAnimationToEnd
- takeScreenshot: ${OUT}/06-sleep
- tapOn: "30 Min."
- tapOn: "Player schließen"
- scrollUntilVisible:
    element: "Speichere deine Lieblingssender|Deine Sender"
    direction: UP
- waitForAnimationToEnd
- takeScreenshot: ${OUT}/02-home
- tapOn: "Suche"
- waitForAnimationToEnd
- takeScreenshot: ${OUT}/03-search
- tapOn: "Meine Sender"
- waitForAnimationToEnd
- takeScreenshot: ${OUT}/04-library
- tapOn: "Suche"
- scrollUntilVisible:
    element: "Länder"
    direction: DOWN
- tapOn: "Länder"
- extendedWaitUntil:
    visible: "Deutschland"
    timeout: 20000
- waitForAnimationToEnd
- takeScreenshot: ${OUT}/05-countries
